Fix spacing for gallery of moving object files

--- a/src/web_interface/php/css/style.less
+++ b/src/web_interface/php/css/style.less
@@ -267,7 +267,7 @@ div.gallery_extra { font-size: 14px; padding: 5px; color: #888; }
 div.gallery_still .gallery_still_img { box-shadow: 10px 10px 5px #ccc; }
 div.image_substitute { display: inline-block; width: 220px; height: 147px; background-color: #e0e0e0; border: 1px solid #aaa; }
 div.image_substitute div.mimetype { font-size: 20px; color:#aaa; font-weight: bold; text-align: center; position: relative; top: 50%; transform: translateY(-50%); }
-div.moving-obj-files div.gallery_item { height:332px; }
+div.moving-obj-files div.gallery_item { height:395px; }
 div.scrolling_text_container { width:720px; height:480px; padding:8px; border:1px solid #ddd; border-radius: 7px; overflow:scroll; font-family:monospace; }
 div.gallery_image_classification { position: absolute; left: 3px; top: 3px; z-index: 10; background-color: @medium_purple; color: black; font-size: 12px; font-weight: bold; padding: 4px; }
 canvas.PLbuf0 { position: absolute; z-index: 10; pointer-events: none; display: none; }
